fix: add dark mode

--- a/src/content-elements/styles/variables/modifiers/container.scss
+++ b/src/content-elements/styles/variables/modifiers/container.scss
@@ -1,6 +1,7 @@
 $container-content-max-width: 1336px;
 
-:root {
+:root,
+.dark-mode {
   /**
    * User input values.
    */
